test/log/reduction/vrdotp_vv_u16.txt
vrdotp_vv_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrdotp_vv_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrdotp_vv_u16.c:30:6: warning: no previous prototype for 'vrdotp_vv_u16_golden' [-Wmissing-prototypes]
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrdotp_vv_u16.c: In function 'vrdotp_vv_u16_golden':
vrdotp_vv_u16.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrdotp_vv_u16.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrdotp_vv_u16.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrdotp_vv_u16.c: In function 'main':
vrdotp_vv_u16.c:37:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     uint16x32_t a;
      |                 ^
vrdotp_vv_u16.c:30:37: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                           ~~~~~~~~~~^
vrdotp_vv_u16.c:38:17: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     uint16x32_t b;
      |                 ^
vrdotp_vv_u16.c:30:49: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                       ~~~~~~~~~~^
vrdotp_vv_u16.c:39:17: warning: declaration of 'c' shadows a parameter [-Wshadow]
   39 |     uint16x32_t c;
      |                 ^
vrdotp_vv_u16.c:30:61: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                   ~~~~~~~~~~^
vrdotp_vv_u16.c:45:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     uint16_t exp_result[32] = {0};
      |              ^~~~~~~~~~
vrdotp_vv_u16.c:30:73: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                               ~~~~~~~~~~^~~~~~~~~~
vrdotp_vv_u16.c:55:14: error: too many arguments to function 'vrdotp_vv_u16'
   55 |     result = vrdotp_vv_u16(a,b,c);
      |              ^~~~~~~~~~~~~
In file included from vrdotp_vv_u16.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1930:1: note: declared here
 1930 | __RUGRATS_DOTP_VV_OP (rdotp, u, uint, uint, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~
vrdotp_vv_u16.c: In function 'vrdotp_vv_u16_golden':
vrdotp_vv_u16.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrdotp_vv_u16.c:30:37: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                           ~~~~~~~~~~^
vrdotp_vv_u16.c:30:49: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                       ~~~~~~~~~~^
vrdotp_vv_u16.c:30:61: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                   ~~~~~~~~~~^
vrdotp_vv_u16.c:30:73: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                               ~~~~~~~~~~^~~~~~~~~~
At top level:
vrdotp_vv_u16.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrdotp_vv_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrdotp_vv_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed